feat(backend,frontend): implement tournament page
